# robot_mcp

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CATCHUP.md  PHASE3_4_STATUS.md  README.md  idea.md
.config/: .yamllint.yaml  ruff.toml
.devcontainer/: Dockerfile  generate_devcontainer.sh
.github/actions/build-and-test/: action.yml
.github/workflows/: on_push.yml  on_release.yml  pre_commit.yml
robot_mcp_bringup/: CMakeLists.txt  DEVELOPING.md  README.md  package.xml
robot_mcp_bringup/config/: minimal.yaml
robot_mcp_bringup/launch/: robot_mcp.launch.yaml
robot_mcp_common_msg_plugins/robot_common_msg_plugins/: CMakeLists.txt  package.xml
robot_mcp_common_msg_plugins/robot_mcp_geometry_msg_plugins/: CMakeLists.txt  package.xml  plugins.xml
robot_mcp_common_msg_plugins/robot_mcp_nav_msg_plugins/: CMakeLists.txt  package.xml  plugins.xml
robot_mcp_common_msg_plugins/robot_mcp_sensor_msg_plugins/: CMakeLists.txt  package.xml  plugins.xml
robot_mcp_common_msg_plugins/robot_mcp_std_msg_plugins/: CMakeLists.txt  package.xml  plugins.xml
robot_mcp_generic_plugins/: CMakeLists.txt  package.xml  plugins.xml
robot_mcp_generic_plugins/include/robot_mcp_generic_plugins/: generic_service_plugin.hpp  generic_topic_plugin.hpp  message_conversion.hpp
robot_mcp_generic_plugins/src/: generic_service_plugin.cpp  generic_topic_plugin.cpp  message_conversion.cpp
robot_mcp_msg_pluginlib/: CMakeLists.txt  package.xml
robot_mcp_msg_pluginlib/include/robot_mcp_msg_pluginlib/: message_plugin.hpp  visibility_control.h
robot_mcp_server/: CMakeLists.txt  DEVELOPING.md  README.md  package.xml
robot_mcp_server/include/robot_mcp_server/: robot_mcp_server_node.hpp
robot_mcp_server/include/robot_mcp_server/mcp_config/: config_parser.hpp  config_types.hpp
robot_mcp_server/include/robot_mcp_server/mcp_http_server/: auth_middleware.hpp  http_server.hpp  json_rpc_handler.hpp
robot_mcp_server/include/robot_mcp_server/ros2/: lifecycle_node.hpp
robot_mcp_server/src/: robot_mcp_server_node.cpp
robot_mcp_server/src/mcp_config/: config_parser.cpp
robot_mcp_server/src/mcp_http_server/: auth_middleware.cpp  http_server.cpp  json_rpc_handler.cpp
robot_mcp_server/test/: test_http_components.cpp  test_lifecycle.cpp
robot_mcp_server/test/launch_tests/: complete_config.yaml  minimal_config.yaml  test_authentication.py  test_complete_config.py  test_http_integration.py  test_https.py  test_minimal_config.py  test_utils.py
robot_mcp_server/test_mcp_config/: test_complete_config.py  test_minimal_config.py
robot_mcp_test/: CMakeLists.txt  DEVELOPING.md  README.md  package.xml  robot_mcp_test-extras.cmake
robot_mcp_test/cmake/: add_robot_mcp_test.cmake
robot_mcp_test/include/robot_mcp_test/: robot_mcp_test.hpp
robot_mcp_test/include/test_fixtures/: test_executor_fixture.hpp
robot_mcp_test/include/test_nodes/: client_test_node.hpp  publisher_test_node.hpp  service_test_node.hpp  subscriber_test_node.hpp
robot_mcp_test/src/: test_executor_fixture.cpp
robot_mcp_test/test/: test_basic_example.cpp  test_with_ros.cpp
