<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_mcp_bringup</name>
  <version>0.1.0</version>
  <description>Example configurations, launch files, and custom plugins for robot_mcp</description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <license>Apache 2.0</license>
  <author email="hello@watonomous.ca">WATonomous</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_mcp_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
