<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_mcp_generic_plugins</name>
  <version>0.1.0</version>
  <description>Generic ROS2 message plugins for robot_mcp that support all message types via runtime introspection</description>
  <maintainer email="eddy@watonomous.ca">Eddy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>nlohmann-json-dev</depend>

  <!-- Plugin interface -->
  <depend>robot_mcp_msg_pluginlib</depend>

  <!-- Type support introspection -->
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_runtime_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugins.xml"/>
  </export>
</package>
