<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_mcp_common_msg_plugins</name>
  <version>0.1.0</version>
  <description>
    Metapackage that aggregates common ROS2 message plugins for robot_mcp.
  </description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <author email="hello@watonomous.ca">WATonomous</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_mcp_std_msg_plugins</exec_depend>
  <exec_depend>robot_mcp_geometry_msg_plugins</exec_depend>
  <exec_depend>robot_mcp_sensor_msg_plugins</exec_depend>
  <exec_depend>robot_mcp_nav_msg_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
