<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_mcp_nav_msg_plugins</name>
  <version>0.1.0</version>
  <description>Message plugins for nav_msgs types</description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <license>Apache 2.0</license>
  <author email="hello@watonomous.ca">WATonomous</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_mcp_msg_pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nlohmann-json-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <robot_mcp_msg_pluginlib plugin="${prefix}/plugins.xml" />
  </export>
</package>
